--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
-
     <head>
-
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" >
@@ -10,7 +8,6 @@
 		<link rel="stylesheet" href="css/index.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     </head>
     <body>
         <section>
@@ -112,23 +109,23 @@
 					</div>
 					</div>
                 </div>
-
                 <div class="col-ads">
                     <script src="https://s3-us-west-2.amazonaws.com/kaboodle/kaboodle.js" type="text/javascript"></script>
                     <script data-num-rows="1" src="https://s3-us-west-2.amazonaws.com/kaboodle/kaboodle.js" type="text/javascript"></script>
                 </div>
-
             </div>
-
         </section>
-
         <div class="footer-container">
             <div class="footer">
                 <div class="footer-content">
                     <div class="footer-menu-flex">
                         <div class="footer-menu">
-                            <div class="menu contact">Contact</div>
-                            <div class="menu about">About</div>
+                            <div class="menu contact">
+								<a class="footer-link" href="contact.html">Contact</a>
+							</div>
+                            <div class="menu about">
+								<a class="footer-link" href="aboutus.html">About</a>
+							</div>
                         </div>
                     </div>
                     <div class="privacy-flex">
@@ -150,12 +147,9 @@
                                 <i class="fa fa-telegram" style="font-size: 42px;"></i>
                             </a>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
-
     </body>
-
 </html>
